src/test/ui/type-alias-impl-trait/type-alias-impl-trait-tuple.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/type-alias-impl-trait-tuple.rs:3:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: type alias impl traits are not allowed as field types in structs
  --> $DIR/type-alias-impl-trait-tuple.rs:11:1
   |
LL | / struct Blah {
LL | |
LL | |     my_foo: Foo,
   | |     ----------- this field contains a type alias impl trait
LL | |     my_u8: u8
LL | | }
   | |_^
...
LL |   type Foo = impl MyTrait;
   |   ------------------------ type alias defined here

error: aborting due to previous error; 1 warning emitted

